feat(journal): improve loot signature tracking and table name resolution
- switch item acquisition recording to signature-based inputs with counts
- add table progress helpers for emptiness checks and safe state copying
- add strict component-exact signatures for ItemStack-based loot matching
- introduce item-only approximate fallback when component encoding fails
- update fallback match selection to use first prioritized candidate
- refine archaeology loot table name registry behavior and fallback mapping

This improves journal accuracy for variant loot while keeping stable
fallback behavior when full component data is unavailable.